--- a/bluejaymobile/test-output/index.html
+++ b/bluejaymobile/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\user\AppData\Local\Temp\testng-eclipse-1812083012\testng-customsuite.xml</span>
+                    <span>C:\Users\user\AppData\Local\Temp\testng-eclipse-1439640502\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="bluejayengage.Addprovider_adminonsitesnf" class="method navigator-link" hash-for-method="entrdataprovder">entrdataprovder</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="bluejayengage.Deleteprovider" class="method navigator-link" hash-for-method="delpro">delpro</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -122,14 +122,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">bluejayengage.Addprovider_adminonsitesnf</span>
+              <span class="class-name">bluejayengage.Deleteprovider</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="entrdataprovder">
-                  </a> <!-- entrdataprovder -->
-                  <span class="method-name">entrdataprovder</span>
+                  <a name="delpro">
+                  </a> <!-- delpro -->
+                  <span class="method-name">delpro</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\user\AppData\Local\Temp\testng-eclipse-1812083012\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\user\AppData\Local\Temp\testng-eclipse-1439640502\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,7 +146,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;bluejayengage.Addprovider_adminonsitesnf&quot;/&gt;
+      &lt;class name=&quot;bluejayengage.Deleteprovider&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -188,14 +188,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'entrdataprovder')
-data.setCell(0, 2, 'bluejayengage.Addprovider_adminonsitesnf')
-data.setCell(0, 3, 23781);
+data.setCell(0, 1, 'delpro')
+data.setCell(0, 2, 'bluejayengage.Deleteprovider')
+data.setCell(0, 3, 22784);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 23 seconds</span>
+              <span class="suite-total-time">Total running time: 22 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -221,15 +221,19 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">bluejayengage.Addprovider_adminonsitesnf</div> <!-- chronological-class-name -->
-              <div class="configuration-class before">
-                <span class="method-name">es</span>
+              <div class="chronological-class-name">bluejayengage.Deleteprovider</div> <!-- chronological-class-name -->
+              <div class="configuration-method before">
+                <span class="method-name">openchrome</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- configuration-class before -->
+              </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">entrdataprovder</span>
-                <span class="method-start">2801 ms</span>
+                <span class="method-name">delpro</span>
+                <span class="method-start">22727 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">shut</span>
+                <span class="method-start">45514 ms</span>
+              </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
