--- a/bluejaymobile/test-output/old/Default suite/classes.html
+++ b/bluejaymobile/test-output/old/Default suite/classes.html
@@ -4,28 +4,32 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>bluejayengage.Addprovider_adminonsitesnf</td>
+<td>bluejayengage.Deleteprovider</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>entrdataprovder</td>
+<td>delpro</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>es</td>
-<td>&nbsp;</td></tr>
-<tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>openchrome</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>shut</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
