--- a/bluejaymobile/test-output/old/Default suite/methods.html
+++ b/bluejaymobile/test-output/old/Default suite/methods.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f7d0bd">  <td>22/03/08 14:20:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Addprovider_adminonsitesnf.entrdataprovder()[pri:0, instance:bluejayengage.Addprovider_adminonsitesnf@323b36e0]">entrdataprovder</td> 
-  <td>main@690686166</td>   <td></td> </tr>
-<tr bgcolor="918c79">  <td>22/03/08 14:20:18</td>   <td>-2797</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;StayLogin.es()[pri:0, instance:bluejayengage.Addprovider_adminonsitesnf@323b36e0]">&gt;&gt;es</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@690686166</td>   <td></td> </tr>
+<tr bgcolor="918c79">  <td>22/04/04 10:42:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Login.openchrome()[pri:0, instance:bluejayengage.Deleteprovider@20ce78ec]">&gt;&gt;openchrome</td> 
+<td>&nbsp;</td>  <td>main@921420643</td>   <td></td> </tr>
+<tr bgcolor="918c79">  <td>22/04/04 10:43:29</td>   <td>45513</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Login.shut()[pri:0, instance:bluejayengage.Deleteprovider@20ce78ec]">&lt;&lt;shut</td> 
+<td>&nbsp;</td>  <td>main@921420643</td>   <td></td> </tr>
+<tr bgcolor="f7d0bd">  <td>22/04/04 10:43:06</td>   <td>22726</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Deleteprovider.delpro()[pri:0, instance:bluejayengage.Deleteprovider@20ce78ec]">delpro</td> 
+  <td>main@921420643</td>   <td></td> </tr>
 </table>
